tests/type_errors/record_where_int_expected.nos
# expect_error: expected matching numeric types
# Test: passing record where Int is expected
# NOTE: Currently caught at runtime. Ideally should be compile-time.

type Point = { x: Int, y: Int }

double(n: Int) = n * 2

main() = {
    p = Point(1, 2)
    double(p)
}
